testsuite/gnatprove/tests/U323-018__flow_crash_slices/test.out
p.adb:6:38: error: launch "gnatprove --explain=E0007" for more information
p.adb:6:38: error: subtype constraint cannot depend on variable input "V" [E0007]
p.adb:6:38: error: use instead a constant initialized to the expression with variable input
p.adb:7:30: error: launch "gnatprove --explain=E0007" for more information
p.adb:7:30: error: renamed slice cannot depend on variable input "V" [E0007]
p.adb:7:30: error: use instead a constant initialized to the expression with variable input
p.adb:16:47: error: launch "gnatprove --explain=E0007" for more information
p.adb:16:47: error: renamed slice cannot depend on variable input "V" [E0007]
p.adb:16:47: error: use instead a constant initialized to the expression with variable input
gnatprove: error during flow analysis and proof
